modificando main e index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="js/main.js"></script>
     
-    <title>Tienda Spachemi</title>
+    <title>Tienda Spachemi</title>>
 </head>
 <body>
     <div class="modal fade" id="modalcontenedor" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
